--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="left">
       <div class="container">
         <pre class="code" contenteditable="true">
-Hello! this is an html editor
-        </pre>
+There is much to be done        </pre>
       </div>
     </div>
     <div class="right">
