Removed ridiculous whitespace

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="left">
       <div class="container">
         <pre class="code" contenteditable="true">
-There is much to be done        </pre>
+          There is much to be done
+        </pre>
       </div>
     </div>
     <div class="right">
