Correct tag, and sample that makes sense

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="left">
       <div class="container">
-        <pre class="code" contenteditable="true">
-          There is much to be done
-        </pre>
+        <xmp class="code" contenteditable="true">
+<div style="color: red; background:black;"> There is much to be done </div>
+        </xmp>
       </div>
     </div>
     <div class="right">
