--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="right">
       <a class="button" href="#">render</a>
+      <input type="checkbox" id="toggle">
       <div class="container">
         <div class="result">
 
