--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="right">
-      <a class="button" href="#">render</a>
+        <span>Check to render</span>
       <input type="checkbox" id="toggle">
       <div class="container">
         <div class="result">
