Making it shwifty

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="left">
       <div class="container">
         <xmp class="code" contenteditable="true">
-<div style="color: red; background:black;"> There is much to be done </div>
+          Let's do some ***Markdown***
         </xmp>
       </div>
     </div>
